Saving examples and styles On branch master Changes to be committed:         modified:   .gitignore         new file:   documentation/tikz-er2.sty         new file:   documentation/ulem.sty         new file:   example_files/bck_der.tex         new file:   example_files/bck_main_document.tex         new file:   example_files/class-diagram.tex         new file:   example_files/sequence-diagram.tex

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /*
-!src/*.cpp
-!src/*.h
+!src
 !include/
 !lib/
-!documentation/*.tex
+!documentation
+!example_files
 !.gitignore
 !CMakeLists.txt
 !README.md
