Adds Sql file to create DER structure in Logistic Database. Mods DER and data dictionary. On branch master Changes to be committed:         modified:   .gitignore         new file:   database/database_default_creation.sql         modified:   documentation/der-content.tex         deleted:    documentation/der.tex         modified:   documentation/main_document.tex         deleted:    example_files/bck_der.tex         deleted:    example_files/bck_main_document.tex         deleted:    example_files/class-diagram.tex         deleted:    example_files/sequence-diagram.tex

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /*
-!src
+!documentation/
+!database/
 !include/
 !lib/
-!documentation
-!example_files
+!src/
 !.gitignore
 !CMakeLists.txt
 !README.md
